+++++++++++++++++++++

CHANGES
-------

* Switch to using multiprocessing to determine CPU counts.
 (Chris Jones, #1092276)

* The cli UI now has primitive differentiation between multiple stream types.
  This is not yet exposed to the end user, but is sufficient to enable the
  load command to take interactive input without it reading from the raw
  subunit stream on stdin. (Robert Collins)

0.0.15
++++++

CHANGES
-------

* Expects subunit v2 if the local library has v2 support in the subunit
  library. This should be seamless if the system under test shares the
  Python libraries. If it doesn't, either arrange to use ``subunit-2to1``
  or upgrade the subunit libraries for the system under test.
  (Robert Collins)

* ``--full-results`` is now a no-op, use ``--subunit`` to get unfiltered
  output. (Robert Collins)

0.0.14
++++++

IMPROVEMENTS
------------

* First cut at full Python 3 support. The 'works for me' release.
  (Robert Collins)

0.0.13
++++++

IMPROVEMENTS
------------

* ``setup.py testr`` was not indicating test failures via it's return code.
  (Monty Taylor)

0.0.12
++++++

IMPROVEMENTS
------------

* There is now a setuptools extension provided by ``testrespository`` making it
  easy to invoke testr from setup.py driven workflows.
  (Monty Taylor, Robert Collins)

INTERNALS
---------

* BSD license file incorrectly claimed copyright by subunit contributors.
  (Monty Taylor)

* .testr.conf is now shipped in the source distribution to aid folk wanting to
  validate that testrepository works correctly on their machine.
  (Robert Collins)

0.0.11
++++++

IMPROVEMENTS
------------

* Fix another incompatability with Mac OS X - gdbm dbm modules don't support
  get. (Robert Collins, #1094330)

0.0.10
++++++

IMPROVEMENTS
------------

* It's now possible to configure ``test_run_concurrency`` in ``.testr.conf``
  to have concurrency defined by a callout. (Robert Collins)

* Testr supports running tests in arbitrary environments. See ``Remote or